class tables, name check update
